Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60822

[REG: 4->5] WA_TranslucentBackground cannot be changed after widget has been shown

XMLWordPrintable

    • Linux/X11, Windows

      To reproduce, run attached example on Linux (issue is not limited to Linux though) and wait. Translucent background should be set, but it keeps old setting. QWidgetPrivate::updateIsTranslucent() only sets requested format for the window, but that is not used until window would be recreated (destroy();create();show();).

        1. qtbug60822.zip
          1.0 kB
        2. qtbug60822.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: