Windows QPA: Enable toggling Windows transparency

Change QWindowsWindow::format() to return the QWindow's requested
format instead of storing it as do the other platforms. This will
cause the alpha (layered flag) to be adapted in
QWindowsBackingStore::flush(). Note that it does not fix
the issue; the window does not update correctly after
changing WS_EX_LAYERED.

Task-number: QTBUG-60822
Change-Id: I3facd93f993b3b422b6818d55c1bce884fb57234
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit d9d18596e2b242c43e64281e6a13396d329f686d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>